--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   material: ^1.0.0+2
+  http: ^0.13.5
 
 
   # The following adds the Cupertino Icons font to your application.
